# song-manager-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
songmanager/core/: admin.py  forms.py  urls.py  views.py
songmanager/core/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_status_song.py  0004_insert_song_statuses.py  0005_status_order.py  max_migration.txt
songmanager/core/models/: __init__.py  song.py  user.py
songmanager/core/templatetags/: song_duration_format.py
songmanager/songmanager/: asgi.py  settings.py  urls.py  wsgi.py
songmanager/static/js/: index.js
songmanager/templates/: base.html  home.html
songmanager/templates/includes/: navbar.html
songmanager/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
songmanager/templates/songs/: index.html  number-input.html  search-results.html  table.html
