[tool.poetry]
name = "songmanager"
version = "0.1.0"
description = "Manage songs, set lists, and more"
authors = ["Derek Morey <derek.o.morey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-htmx = "^1.16.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-linear-migrations = "^2.12.0"
django-debug-toolbar = "^4.3.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
